Feat: Bump skija Version &       add CosmeticsPage &       add Cape &       clean

--- a/src/main/resources/assets/pupper/languages/cn.lang
+++ b/src/main/resources/assets/pupper/languages/cn.lang
@@ -19,6 +19,8 @@ text.name=名称
 text.serveraddress=服务器地址
 text.createprofile=创建个人资料
 text.icon=图标
+text.modmenu.cosmetics=饰品
+text.cape=披风
 
 design.simple=简约
 design.classic=经典
